# iocraft

./: .codecov.yml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: commit.yaml  commits.yaml  pr.yaml  push.yaml
examples/: README.md  borders.rs  calculator.rs  context.rs  counter.rs  form.rs  fullscreen.rs  hello_world.rs  modal.rs  overlap.rs  picker.rs  progress_bar.rs  scrolling.rs  table.rs  use_input.rs  use_output.rs  use_stderr.rs  use_stdio.rs  use_stdout.rs  weather.rs
src/: lib.rs  prelude.rs  render.rs  traits.rs
src/components/: box.rs  mod.rs  text.rs
