[workspace]
resolver = "2"

members = [
    "packages/iocraft",
    "packages/iocraft-macros",
]

[package]
name = "iocraft-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
iocraft = { path = "packages/iocraft" }
futures = "0.3.30"
smol = "2.0.1"

[dependencies]
unicode-width = "0.1.13"
