[workspace]
resolver = "2"

members = [
    "packages/iocraft",
    "packages/iocraft-macros",
]

[package]
name = "iocraft-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
iocraft = { path = "packages/iocraft" }
futures = "0.3.30"
smol = "2.0.1"
chrono = "0.4.38"
unicode-width = "0.1.13"
anyhow = "1.0.89"
surf = { version = "2.3.2", default-features = false, features = ["h1-client"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
